[tool.poetry]
name = "poetry_demo"
version = "0.1.0"
description = ""
authors = ["Jidhu Mohan <jidhumohan.mattummalvalappil@siemens.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.22.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
